<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spacewall" >

	<TextView
		android:id="@+id/item"
		android:layout_width="400dp"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30dp"
		android:background="@color/cornsilk"
		android:gravity="center"
		android:text="@string/items"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	<TextView
		android:id="@+id/iteminfo"
		android:layout_width="400dp"
		android:layout_height="wrap_content"
		android:layout_below="@+id/item"
		android:layout_centerHorizontal="true"
		android:text="@string/iteminfo"
		android:textSize="20sp"
		android:background="@color/cornsilk" />
    <ScrollView
        android:id="@+id/itemlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iteminfo"
        android:layout_marginTop="50dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_gravity="center"
            android:orientation="vertical" >
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/ShopNotReady"
				android:background="@color/cornsilk"
				android:textAppearance="?android:attr/textAppearanceLarge"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>