<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/skyblue"
    android:orientation="vertical">
    <include layout="@layout/adview"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/Stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/skyblue"
            android:text="@string/stage"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/Shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/skyblue"
            android:text="@string/shop"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/skyblue"
            android:text="@string/Menu"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
</LinearLayout>