<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peru" >

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <Button
        android:id="@+id/weak"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="W" />

    <Button
        android:id="@+id/normal"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/weak"
        android:text="@string/Normal" />

    <Button
        android:id="@+id/strong"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/normal"
        android:text="S" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7" >

        </FrameLayout>
            <RelativeLayout
                android:id="@+id/pause"
                android:layout_width="200dip"
                android:layout_height="200dip"
                android:layout_gravity="center"
                android:background="@color/orange" >

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="49dp"
                    android:text="@string/Resume" />

                <Button
                    android:id="@+id/retire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/back"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:text="@string/Retire" />

                <TextView
                    android:id="@+id/Menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/Menu"
                    android:textColor="@color/sienna" />

                </RelativeLayout>

        </FrameLayout>
    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/orange"
        android:textColor="@color/sienna"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/Menu" />

</RelativeLayout>
