<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tweetpop"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#000000" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="300dip"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dip"
            android:text="@string/Share"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/tweetText"
                android:layout_width="200dip"
                android:layout_height="180dip"
                android:background="@color/white"
                android:ems="10"
                android:gravity="top" >

                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dip"
                android:layout_height="80dip" />
        </LinearLayout>

        <TextView
            android:id="@+id/tweetTextCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="140" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical" >

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:onClick="tapPopBtn"
                android:tag="0"
                android:text="@string/Cancel"
                android:textColor="#0099FF" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:onClick="tapPopBtn"
                android:tag="1"
                android:text="@string/Tweet"
                android:textColor="#0099FF" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>